--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  
 }
 
 body {
@@ -27,7 +28,7 @@ body {
 * {
   box-sizing: border-box;
   padding: 0;
-  margin: 24px;
+  margin: 0;
 }
 
 a {
