--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: #121212; /* 블랙 배경색 */
+  color: white; /* 텍스트 색상 */
   
 }
 
