로고 서체 변경 inconsolata -> Poppins - next js에서 폰트 적용

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,15 @@
   --foreground: #171717;
 }
 
+@font-face {
+  font-family: 'Pretendard';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -22,7 +31,7 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: 'Pretendard', sans-serif;
+  font-family: 'Pretendard-Regular', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -31,6 +40,7 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: inherit;
 }
 
 a {
