FIX 모바일일때는 너비를 90%로 조정

--- a/src/components/UserSection/UserSectionComponent.module.css
+++ b/src/components/UserSection/UserSectionComponent.module.css
@@ -32,6 +32,11 @@
 
 /* --- 모바일 대응 (반응형) 추가! --- */
 @media (max-width: 768px) {
+
+  .userSectionContainer {
+    width: 90%;
+  }
+
   .userSectionContent {
     flex-direction: column;
   }
